Resolve "Score computation"
